name:                  emacs-keys
version:               0.1.0.0
synopsis:              library to parse emacs style keybinding into the modifiers and the chars
description:           Allows parsing emacs style keybindings like "M-a", "C-M-a" or
                       "M-Return". For convenience a TH helper that turns parse
                       errors into compile errors is also provided.
homepage:              https://github.com/cocreature/emacs-keys
bug-reports:           https://github.com/cocreature/emacs-keys
license:               ISC
license-file:          LICENSE
author:                Moritz Kiefer
maintainer:            moritz.kiefer@purelyfunctional.org
-- copyright:
category:              Parsing
build-type:            Custom
-- extra-source-files:  
cabal-version:         >=1.10
tested-with:           GHC == 7.10.3, GHC == 8.0.2

source-repository      head
  type:                git
  location:            https://github.com/cocreature/emacs-keys.git

custom-setup
 setup-depends:
   base >= 4.8 && <5,
   Cabal,
   cabal-doctest >= 1 && <1.1

library
  exposed-modules:     EmacsKeys
  other-modules:       EmacsKeys.Parser
                     , EmacsKeys.TH
  build-depends:       base             >= 4.9  && < 5
                     , template-haskell >= 2.10 && < 2.12
                     , xkbcommon        >= 0.0  && < 0.1
                     , th-lift          >= 0.7  && < 0.8
                     , split            >= 0.2  && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite emacs-keys-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       emacs-keys
                     , base       >= 4.9 && < 5
                     , hspec      >= 2.2 && < 2.5
                     , QuickCheck >= 2.9 && < 2.10
                     , xkbcommon  >= 0.0 && < 0.1
  ghc-options:         -Wall

test-suite doctests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctests.hs
  build-depends:       base    >= 4.9  && < 5
                     , doctest >= 0.11 && < 0.12
